--- a/index.html
+++ b/index.html
@@ -53,6 +53,9 @@
          border-radius:10px;padding:8px}
   .point strong{font-weight:700}
   .footer{color:#8b95a7;font-size:12px;text-align:center;padding:10px}
+  @media (max-width: 980px){
+    .container{grid-template-columns:1fr}
+  }
 </style>
 </head>
 <body>
@@ -182,6 +185,17 @@ const clamp = (v,a,b)=>Math.max(a,Math.min(b,v));
 const dist = (a,b)=>Math.hypot(a.x-b.x,a.y-b.y);
 const lerp = (a,b,t)=>a+(b-a)*t;
 
+/* 👇 ฟังก์ชันใหม่: แปลงจุดคลิกให้ตรงกับพิกัดจริงบนแคนวาส */
+function getCanvasPos(e){
+  const rect = canvas.getBoundingClientRect();
+  const scaleX = canvas.width  / rect.width;
+  const scaleY = canvas.height / rect.height;
+  return {
+    x: (e.clientX - rect.left) * scaleX,
+    y: (e.clientY - rect.top)  * scaleY
+  };
+}
+
 function download(filename, data, type="application/json"){
   const blob = new Blob([data], {type});
   const url = URL.createObjectURL(blob);
@@ -232,8 +246,6 @@ function drawAll(){
     for(let x=0;x<canvas.width;x+=40){ctx.beginPath();ctx.moveTo(x,0);ctx.lineTo(x,canvas.height);ctx.stroke()}
     for(let y=0;y<canvas.height;y+=40){ctx.beginPath();ctx.moveTo(0,y);ctx.lineTo(canvas.width,y);ctx.stroke()}
   }
-  // heatmap already blended on canvas bitmap; re-drawing points afterward keeps them on top.
-
   // temp scale line
   if(tempLine){
     ctx.strokeStyle = '#8fd3ff';
@@ -397,7 +409,7 @@ function renderHeatmap(){
         val = rbfValue(x,y,points,eps,rbfWeights);
       }
       const t = clamp((val - vmin) / Math.max(1e-9,(vmax - vmin)), 0,1);
-      const col = colorAt(1-t); // 1-t soว่า สีฟ้า=ดี (ค่าน้อยติด 0 → สัญญาณแรง)
+      const col = colorAt(1-t); // 1-t: สีฟ้า=ดี (ค่าต่ำ→สัญญาณแรง)
       // parse color
       const m = col.match(/rgba\((\d+),(\d+),(\d+),/);
       const r = +m[1], g=+m[2], b=+m[3];
@@ -530,10 +542,9 @@ $('#loadJson').addEventListener('change', e=>{
   reader.readAsText(f);
 });
 
+/* ✅ ใช้ตำแหน่งคลิกแบบแก้เยื้องแล้ว */
 canvas.addEventListener('click', e=>{
-  const rect = canvas.getBoundingClientRect();
-  const x = (e.clientX - rect.left);
-  const y = (e.clientY - rect.top);
+  const {x, y} = getCanvasPos(e);
 
   if(mode==='scale'){
     if(!tempLine){ tempLine = {a:{x,y}, b:{x,y}}; }
@@ -559,8 +570,8 @@ canvas.addEventListener('click', e=>{
 
 canvas.addEventListener('mousemove', e=>{
   if(mode==='scale' && tempLine){
-    const rect = canvas.getBoundingClientRect();
-    tempLine.b = {x: e.clientX-rect.left, y: e.clientY-rect.top};
+    const {x, y} = getCanvasPos(e);
+    tempLine.b = {x, y};
     drawAll();
   }
 });
