--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="utf-8" />
 <meta name="viewport" content="width=device-width,initial-scale=1" />
-<title>Wi-Fi Heatmap — RBF + Obstacles (Red→Green -90 to -40 dBm)</title>
+<title>Wi-Fi Heatmap — AP Model + RBF + Obstacles (Red→Green -90..-40 dBm)</title>
 <style>
   :root{
     --bg:#0f1220; --panel:#171a2b; --muted:#9aa4b2; --text:#e8ecf1;
@@ -16,7 +16,7 @@
   header{padding:14px 18px;border-bottom:1px solid #202540;background:rgba(17,22,36,.7);
          position:sticky;top:0;backdrop-filter:blur(8px);z-index:50}
   header h1{margin:0;font-size:18px}
-  .container{display:grid;grid-template-columns:360px 1fr;gap:14px;padding:14px;height:calc(100% - 64px)}
+  .container{display:grid;grid-template-columns:380px 1fr;gap:14px;padding:14px;height:calc(100% - 64px)}
   .panel{background:var(--panel);border:1px solid #242a49;border-radius:14px;padding:14px;overflow:auto}
   .section{margin-bottom:14px;padding-bottom:12px;border-bottom:1px dashed #2a3156}
   .section:last-child{border-bottom:0;margin-bottom:0;padding-bottom:0}
@@ -42,14 +42,13 @@
   .muted{color:var(--muted)}
   .badge{font-size:12px;padding:4px 8px;border-radius:999px;background:#22284a;border:1px solid #2a3156}
   .small{font-size:12px}
-  .point{display:flex;justify-content:space-between;gap:10px;background:#131a33;border:1px solid #2a3156;border-radius:10px;padding:8px}
-  .matRow{display:flex;justify-content:space-between;gap:8px;align-items:center;background:#141a34;border:1px solid #2a3156;border-radius:10px;padding:6px 8px}
+  .point,.apRow,.matRow{display:flex;justify-content:space-between;gap:8px;align-items:center;background:#141a34;border:1px solid #2a3156;border-radius:10px;padding:6px 8px}
   .dot{width:10px;height:10px;border-radius:50%}
   @media (max-width: 980px){ .container{grid-template-columns:1fr} }
 </style>
 </head>
 <body>
-<header><h1>📶 Wi-Fi Heatmap — RBF + Obstacles (Red→Green)</h1></header>
+<header><h1>📶 Wi-Fi Heatmap — AP Model + RBF + Obstacles (Red→Green)</h1></header>
 
 <div class="container">
   <!-- Left control panel -->
@@ -63,19 +62,45 @@
     </div>
 
     <div class="section">
-      <div class="label">2) ตั้งสเกลหน่วยจริง</div>
+      <div class="label">2) ตั้งสเกลหน่วยจริง (จำเป็นเมื่อใช้ AP)</div>
       <div class="row">
         <button id="btnScale">🧭 ตั้งสเกล (ลาก 2 จุด)</button>
         <span class="chip">สเกลปัจจุบัน: <span id="scaleLabel">ยังไม่ตั้ง</span></span>
       </div>
+      <div class="small muted">ระบบ AP ต้องรู้ “เมตร” เพื่อคำนวณระยะจาก AP → จุดต่างๆ</div>
     </div>
 
     <div class="section">
-      <div class="label">3) เพิ่มจุดวัด RSSI</div>
+      <div class="label">3) วาง Access Point (แบบจำลองระยะทาง)</div>
       <div class="grid">
         <div>
-          <div class="label">SSID/Note</div>
-          <input type="text" id="ssidInput" placeholder="เช่น Home-AP หรือหมายเหตุ" />
+          <div class="label">ชื่อ/SSID</div>
+          <input type="text" id="apLabel" placeholder="เช่น AP-1" />
+        </div>
+        <div>
+          <div class="label">P₀ @1 m (dBm)</div>
+          <input type="number" id="apP0" value="-40" step="1" />
+        </div>
+        <div>
+          <div class="label">n (Path-loss exponent)</div>
+          <input type="number" id="apN" value="2.2" step="0.1" />
+        </div>
+      </div>
+      <div class="row" style="margin-top:8px">
+        <button id="btnAP">📡 โหมดวาง AP (คลิกบนแผนที่)</button>
+        <button id="btnAPUndo" class="ghost">↩️ ลบ AP ล่าสุด</button>
+        <button id="btnAPClear" class="danger">🗑️ ล้าง AP ทั้งหมด</button>
+      </div>
+      <div id="apList" style="margin-top:10px;display:grid;gap:6px;"></div>
+      <div class="small muted">หลาย AP ได้ — ระบบจะรวมกำลังสัญญาณ (mW) แล้วแปลงกลับเป็น dBm</div>
+    </div>
+
+    <div class="section">
+      <div class="label">4) จุดวัด RSSI (สำรอง—ใช้เมื่อไม่มี AP)</div>
+      <div class="grid">
+        <div>
+          <div class="label">Note</div>
+          <input type="text" id="ssidInput" placeholder="เช่น Remark จุดวัด" />
         </div>
         <div>
           <div class="label">RSSI (dBm)</div>
@@ -91,14 +116,14 @@
     </div>
 
     <div class="section">
-      <div class="label">4) วัสดุ/สิ่งกีดขวาง (ลากเส้นกำแพง)</div>
+      <div class="label">5) วัสดุ/สิ่งกีดขวาง (ลากเส้น)</div>
       <div class="grid">
         <div>
           <div class="label">ชนิดวัสดุ</div>
           <select id="matType"></select>
         </div>
         <div>
-          <div class="label">ค่าการดูดกลืน (dB/ครั้ง)</div>
+          <div class="label">การดูดกลืน (dB/ครั้ง)</div>
           <input type="number" id="matAtt" value="8" step="0.5" />
         </div>
       </div>
@@ -111,12 +136,8 @@
     </div>
 
     <div class="section">
-      <div class="label">5) ตั้งค่า RBF</div>
+      <div class="label">6) ตั้งค่าเรนเดอร์</div>
       <div class="grid">
-        <div>
-          <div class="label">RBF epsilon (px⁻¹)</div>
-          <input type="number" id="epsilon" value="0.01" step="0.005" />
-        </div>
         <div>
           <div class="label">Grid step (px)</div>
           <input type="number" id="gridStep" value="6" min="2" step="1" />
@@ -125,29 +146,32 @@
           <div class="label">โปร่งใสฮีตแมป</div>
           <input type="number" id="alpha" value="0.6" min="0" max="1" step="0.05" />
         </div>
+        <div>
+          <div class="label">RBF epsilon (px⁻¹) <span class="muted small">(ใช้เมื่อไม่มี AP)</span></div>
+          <input type="number" id="epsilon" value="0.01" step="0.005" />
+        </div>
       </div>
       <div class="row" style="margin-top:10px">
-        <button id="btnRender">🔥 สร้าง Heatmap (RBF)</button>
+        <button id="btnRender">🔥 สร้าง Heatmap</button>
         <button id="btnExport">🖼️ ส่งออก PNG</button>
       </div>
       <div class="legend" style="margin-top:10px">
         <div id="grad" class="grad"></div>
         <div class="small"><span id="legendMin">-90</span> dBm ⟷ <span id="legendMax">-40</span> dBm</div>
       </div>
-      <div class="small muted">โทนสีตายตัว: แดง (−90 dBm) → เขียว (−40 dBm)</div>
+      <div class="small muted">โทนสีคงที่: แดง (−90 dBm) → เขียว (−40 dBm)</div>
     </div>
 
     <div class="section">
-      <div class="label">6) บันทึก/โหลดโปรเจกต์</div>
+      <div class="label">7) บันทึก/โหลดโปรเจกต์</div>
       <div class="row">
         <button id="btnSave">💾 Save JSON</button>
         <input type="file" id="loadJson" accept="application/json" />
       </div>
-      <div class="small muted">ไฟล์ JSON จะเก็บ: จุดวัด + เส้นวัสดุ + การตั้งค่าทั้งหมด</div>
     </div>
 
     <div class="section small muted">
-      คีย์ลัด: <span class="kbd">S</span> ตั้งสเกล • <span class="kbd">P</span> เพิ่มจุด • <span class="kbd">W</span> วัสดุ • <span class="kbd">H</span> เรนเดอร์ • <span class="kbd">Z</span> ลบจุดล่าสุด
+      คีย์ลัด: <span class="kbd">S</span> สเกล • <span class="kbd">A</span> วาง AP • <span class="kbd">P</span> จุดวัด • <span class="kbd">W</span> วัสดุ • <span class="kbd">H</span> เรนเดอร์ • <span class="kbd">Z</span> ลบจุดล่าสุด
     </div>
   </aside>
 
@@ -155,10 +179,10 @@
   <main class="panel" style="display:flex;flex-direction:column;gap:10px">
     <div class="row">
       <span class="badge" id="modeBadge">โหมด: ปกติ</span>
-      <span class="muted small">อัปโหลดภาพ → ตั้งสเกล → เพิ่มจุด → วาดวัสดุ → เรนเดอร์</span>
+      <span class="muted small">ลำดับ: อัปโหลดภาพ → ตั้งสเกล → วาง AP → วาดวัสดุ → เรนเดอร์</span>
     </div>
     <canvas id="canvas" width="1280" height="800"></canvas>
-    <div class="small muted">หมายเหตุ: เบราว์เซอร์อ่านค่า Wi-Fi จริงไม่ได้ หน้านี้ใช้ค่าที่คุณวัดมาเอง</div>
+    <div class="small muted">หมายเหตุ: ถ้าไม่ได้วาง AP ระบบจะถอยไปใช้ RBF จากจุดวัด</div>
   </main>
 </div>
 
@@ -171,8 +195,6 @@ const RSSI_MAX = -40;   // เขียว
 const $ = sel => document.querySelector(sel);
 const clamp = (v,a,b)=>Math.max(a,Math.min(b,v));
 const dist = (a,b)=>Math.hypot(a.x-b.x,a.y-b.y);
-
-/* พิกัดคลิกตรงตามขนาดจริงแคนวาส */
 function getCanvasPos(e){
   const rect = canvas.getBoundingClientRect();
   const scaleX = canvas.width  / rect.width;
@@ -211,15 +233,17 @@ const canvas = $('#canvas');
 const ctx = canvas.getContext('2d', { willReadFrequently:true });
 
 let floorImg = null;
+let aps = [];       // {x,y,label,p0,n}
 let points = [];    // {x,y,rssi,label}
 let segments = [];  // {a:{x,y}, b:{x,y}, type, att}
-let mode = 'idle';  // 'scale'|'add'|'mat'
+let mode = 'idle';  // 'scale'|'ap'|'add'|'mat'
 let scale = { pxPerMeter: null };
 let tempLine = null;
 
 const UI = {
   scaleLabel: $('#scaleLabel'),
   modeBadge: $('#modeBadge'),
+  apList: $('#apList'),
   pointList: $('#pointList'),
   matList:   $('#matList'),
   legendMin: $('#legendMin'),
@@ -265,19 +289,27 @@ function drawAll(){
   }
 
   // จุดวัด
-  for(const p of points) drawPoint(p);
+  points.forEach(p=> drawPoint(p));
+
+  // APs
+  aps.forEach(a=> drawAP(a));
 }
 function drawPoint(p){
   ctx.shadowColor='#0008'; ctx.shadowBlur=8; ctx.fillStyle='#7cff9b';
   ctx.beginPath(); ctx.arc(p.x,p.y,6,0,Math.PI*2); ctx.fill(); ctx.shadowBlur=0;
   ctx.strokeStyle='#1b8a5f'; ctx.lineWidth=2; ctx.stroke();
   ctx.fillStyle='#e8ecf1'; ctx.font='12px ui-monospace,monospace';
-  const label = `${p.rssi} dBm${p.label?` · ${p.label}`:''}`;
-  ctx.fillText(label, p.x+10, p.y-8);
+  ctx.fillText(`${p.rssi} dBm${p.label?` · ${p.label}`:''}`, p.x+10, p.y-8);
+}
+function drawAP(a){
+  ctx.fillStyle = '#8fd3ff';
+  ctx.beginPath(); ctx.arc(a.x,a.y,7,0,Math.PI*2); ctx.fill();
+  ctx.strokeStyle='#2a7fff'; ctx.lineWidth=2; ctx.stroke();
+  ctx.fillStyle='#cfe6ff'; ctx.font='12px ui-monospace,monospace';
+  ctx.fillText(`${a.label||'AP'} · P0:${a.p0}dBm n:${a.n}`, a.x+10, a.y-8);
 }
 
 /* ========= Fixed red→green palette (-90 to -40 dBm) ========= */
-// สร้างกราเดียนท์สำหรับ legend
 function makeFixedLegend(){
   const g = $('#grad'); const cvs = document.createElement('canvas');
   cvs.width=256; cvs.height=1; const c=cvs.getContext('2d');
@@ -287,13 +319,11 @@ function makeFixedLegend(){
   c.fillStyle=gr; c.fillRect(0,0,256,1);
   g.style.backgroundImage = `url(${cvs.toDataURL()})`;
 }
-// map ค่า RSSI → สีแดงถึงเขียว
 function colorFromRSSI(v){
   const t = clamp((v - RSSI_MIN) / (RSSI_MAX - RSSI_MIN), 0, 1); // -90→0(red), -40→1(green)
   const r = Math.round(255*(1-t));
   const g = Math.round(255*t);
-  const b = 0;
-  return [r,g,b];
+  return [r,g,0];
 }
 
 /* ========= Geometry: segment intersection ========= */
@@ -316,15 +346,34 @@ function pathObstacleLoss(pFrom, pTo){
   return loss;
 }
 
-/* ========= RBF (Gaussian) — kernel regression + obstacle attenuation ========= */
+/* ========= Models ========= */
+// AP model: RSSI(d) = P0 - 10*n*log10(d/1m) - obstacleLoss
+function rssiFromAPs(x,y){
+  if(!aps.length) return null;
+  if(!scale.pxPerMeter){ alert('โปรดตั้งสเกลก่อน (จำเป็นสำหรับ AP)'); throw new Error('no-scale'); }
+  const P={x,y};
+  let sum_mW = 0;
+  for(const a of aps){
+    const d_px = Math.hypot(x-a.x, y-a.y);
+    const d_m = Math.max(1e-3, d_px / scale.pxPerMeter); // เมตร
+    const lossObs = pathObstacleLoss(P, a);               // dB จากวัสดุ
+    const rssi = a.p0 - 10*a.n*Math.log10(d_m/1.0) - lossObs;
+    const mW = Math.pow(10, rssi/10);
+    sum_mW += mW;
+  }
+  const rssi_total = 10 * Math.log10(Math.max(1e-15, sum_mW));
+  return rssi_total;
+}
+
+// RBF (fallback if no AP)
 function rbfKernel(r, eps){ return Math.exp(- (eps*eps) * r*r); }
 function rbfPredict(x,y, pts, eps){
   let num=0, den=0; const P={x,y};
   for(const p of pts){
     const r = Math.hypot(x-p.x, y-p.y);
     const w = rbfKernel(r, eps);
-    const att = pathObstacleLoss(P, p);    // dB ลดทอนจากวัสดุที่ตัดผ่าน
-    const localRssi = p.rssi - att;        // ปรับค่าจุดวัดรายเส้นทาง
+    const att = pathObstacleLoss(P, p);
+    const localRssi = p.rssi - att;
     num += w * localRssi; den += w;
   }
   return num / Math.max(1e-12, den);
@@ -333,17 +382,15 @@ function rbfPredict(x,y, pts, eps){
 /* ========= Heatmap render ========= */
 function renderHeatmap(){
   if(!floorImg){ alert('โปรดอัปโหลดภาพแปลนก่อน'); return; }
-  if(points.length<2){ alert('ต้องมีจุดวัดอย่างน้อย 2 จุด'); return; }
+  if(aps.length===0 && points.length<2){ alert('วาง AP อย่างน้อย 1 ตัว หรือมีจุดวัด ≥ 2 จุด'); return; }
 
   const gridStep = parseInt($('#gridStep').value||'6',10);
   const alpha = clamp(parseFloat($('#alpha').value||'0.6'),0,1);
   const eps = parseFloat($('#epsilon').value||'0.01');
 
-  // legend คงที่
   UI.legendMin.textContent = RSSI_MIN;
   UI.legendMax.textContent = RSSI_MAX;
   makeFixedLegend();
-
   drawAll();
 
   const imgData = ctx.getImageData(0,0,canvas.width,canvas.height);
@@ -352,8 +399,13 @@ function renderHeatmap(){
 
   for(let y=0; y<canvas.height; y+=block){
     for(let x=0; x<canvas.width; x+=block){
-      const val = rbfPredict(x,y,points,eps);           // ค่า RSSI คาดการณ์
-      const [r,g,b] = colorFromRSSI(val);               // แปลงเป็นสีแดง→เขียว
+      let val;
+      if(aps.length>0){
+        val = rssiFromAPs(x,y); // อิงระยะจาก AP เป็นหลัก
+      }else{
+        val = rbfPredict(x,y,points,eps); // ถอยไปใช้ RBF จากจุดวัด
+      }
+      const [r,g,b] = colorFromRSSI(val);
 
       for(let yy=0; yy<block; yy++){
         if(y+yy>=canvas.height) break;
@@ -370,10 +422,33 @@ function renderHeatmap(){
     }
   }
   ctx.putImageData(imgData,0,0);
-  for(const p of points) drawPoint(p);
+  points.forEach(p=> drawPoint(p));
+  aps.forEach(a=> drawAP(a));
 }
 
 /* ========= Lists ========= */
+function escapeHtml(s){ return s.replace(/[&<>"']/g, m=>({ '&':'&amp;','<':'&lt;','>':'&gt;','"':'&quot;',"'":'&#39;' }[m])); }
+
+function refreshAPList(){
+  UI.apList.innerHTML = '';
+  aps.forEach((a,i)=>{
+    const row = document.createElement('div'); row.className='apRow small';
+    row.innerHTML = `
+      <div>
+        <strong>${a.label||'AP'}</strong> · P0:${a.p0} dBm · n:${a.n}
+        <div class="muted">(${a.x|0},${a.y|0})</div>
+      </div>
+      <div class="row">
+        <button data-i="${i}" class="danger" style="padding:4px 8px">ลบ</button>
+      </div>`;
+    row.querySelector('button').onclick = e=>{
+      aps.splice(+e.target.getAttribute('data-i'),1);
+      drawAll(); refreshAPList();
+    };
+    UI.apList.appendChild(row);
+  });
+}
+
 function refreshPointList(){
   UI.pointList.innerHTML = '';
   points.forEach((p,i)=>{
@@ -389,6 +464,7 @@ function refreshPointList(){
     UI.pointList.appendChild(el);
   });
 }
+
 function refreshMatList(){
   UI.matList.innerHTML = '';
   segments.forEach((s,i)=>{
@@ -410,14 +486,13 @@ function refreshMatList(){
     UI.matList.appendChild(row);
   });
 }
-function escapeHtml(s){ return s.replace(/[&<>"']/g, m=>({ '&':'&amp;','<':'&lt;','>':'&gt;','"':'&quot;',"'":'&#39;' }[m])); }
 
 /* ========= Modes ========= */
 function setMode(m){
   mode = m;
   UI.modeBadge.textContent = `โหมด: ${
     m==='idle'?'ปกติ': m==='scale'?'ตั้งสเกล (คลิก 2 จุด)':
-    m==='add'?'เพิ่มจุด RSSI':'ลากวัสดุ (คลิก-ลาก 2 จุด)'}`
+    m==='ap'?'วาง AP': m==='add'?'เพิ่มจุด RSSI':'ลากวัสดุ (คลิก-ลาก 2 จุด)'}`;
 }
 
 /* ========= Events ========= */
@@ -429,20 +504,24 @@ $('#fileInput').addEventListener('change', e=>{
     floorImg.width = img.width; floorImg.height = img.height;
     const c = floorImg.getContext('2d'); c.drawImage(img,0,0);
     fitCanvasToImage(img);
-    points=[]; segments=[]; tempLine=null; scale.pxPerMeter=null;
+    aps=[]; points=[]; segments=[]; tempLine=null; scale.pxPerMeter=null;
     UI.scaleLabel.textContent='ยังไม่ตั้ง';
-    drawAll(); refreshPointList(); refreshMatList(); makeFixedLegend();
+    drawAll(); refreshAPList(); refreshPointList(); refreshMatList(); makeFixedLegend();
   };
   img.src = URL.createObjectURL(f);
 });
 $('#btnClear').onclick = ()=>{
-  floorImg=null; points=[]; segments=[]; tempLine=null; scale.pxPerMeter=null;
-  UI.scaleLabel.textContent='ยังไม่ตั้ง'; drawAll(); refreshPointList(); refreshMatList(); makeFixedLegend();
+  floorImg=null; aps=[]; points=[]; segments=[]; tempLine=null; scale.pxPerMeter=null;
+  UI.scaleLabel.textContent='ยังไม่ตั้ง'; drawAll(); refreshAPList(); refreshPointList(); refreshMatList(); makeFixedLegend();
 };
 
 $('#btnScale').onclick = ()=> setMode('scale');
+$('#btnAP').onclick    = ()=> setMode('ap');
 $('#btnPoint').onclick = ()=> setMode('add');
 $('#btnMat').onclick   = ()=> setMode('mat');
+
+$('#btnAPUndo').onclick = ()=>{ aps.pop(); drawAll(); refreshAPList(); };
+$('#btnAPClear').onclick = ()=>{ if(confirm('ล้าง AP ทั้งหมด?')){ aps=[]; drawAll(); refreshAPList(); } };
 
 $('#btnUndo').onclick = ()=>{ points.pop(); drawAll(); refreshPointList(); };
 $('#btnClearPts').onclick = ()=>{ if(confirm('ล้างจุดวัดทั้งหมด?')){ points=[]; drawAll(); refreshPointList(); } };
@@ -455,13 +534,13 @@ $('#btnExport').onclick = ()=>{ const a=document.createElement('a'); a.download=
 
 $('#btnSave').onclick = ()=>{
   const payload = {
-    points, segments,
+    aps, points, segments,
     gridStep: +($('#gridStep').value||6),
-    epsilon: +($('#epsilon').value||0.01),
     alpha: +($('#alpha').value||0.6),
+    epsilon: +($('#epsilon').value||0.01),
     scale: scale.pxPerMeter
   };
-  download('heatmap_project_rbf_fixedpalette.json', JSON.stringify(payload,null,2));
+  download('heatmap_project_ap_rbf.json', JSON.stringify(payload,null,2));
 };
 $('#loadJson').addEventListener('change', e=>{
   const f = e.target.files[0]; if(!f) return;
@@ -469,13 +548,15 @@ $('#loadJson').addEventListener('change', e=>{
   reader.onload = ()=>{
     try{
       const obj = JSON.parse(reader.result);
-      points   = obj.points||[]; segments = obj.segments||[];
+      aps      = obj.aps||[];
+      points   = obj.points||[];
+      segments = obj.segments||[];
       $('#gridStep').value = obj.gridStep ?? 6;
-      $('#epsilon').value  = obj.epsilon  ?? 0.01;
       $('#alpha').value    = obj.alpha    ?? 0.6;
+      $('#epsilon').value  = obj.epsilon  ?? 0.01;
       scale.pxPerMeter = obj.scale || null;
       UI.scaleLabel.textContent = scale.pxPerMeter? `${(scale.pxPerMeter).toFixed(1)} px/เมตร`:'ยังไม่ตั้ง';
-      drawAll(); refreshPointList(); refreshMatList(); makeFixedLegend();
+      drawAll(); refreshAPList(); refreshPointList(); refreshMatList(); makeFixedLegend();
     }catch(err){ alert('ไฟล์ JSON ไม่ถูกต้อง'); }
   };
   reader.readAsText(f);
@@ -496,6 +577,12 @@ canvas.addEventListener('click', e=>{
       }
       tempLine=null; setMode('idle'); drawAll();
     }
+  } else if(mode==='ap'){
+    if(!scale.pxPerMeter){ alert('โปรดตั้งสเกลก่อนวาง AP'); return; }
+    const label = $('#apLabel').value.trim() || `AP-${aps.length+1}`;
+    const p0 = parseFloat($('#apP0').value||'-40');
+    const n  = parseFloat($('#apN').value||'2.2');
+    aps.push({x,y,label,p0,n}); drawAll(); refreshAPList();
   } else if(mode==='add'){
     const rssi = parseFloat($('#rssiInput').value||'-60');
     const label = $('#ssidInput').value.trim();
@@ -520,6 +607,7 @@ canvas.addEventListener('mousemove', e=>{
 
 document.addEventListener('keydown', e=>{
   if(e.key==='s' || e.key==='S') setMode('scale');
+  if(e.key==='a' || e.key==='A') setMode('ap');
   if(e.key==='p' || e.key==='P') setMode('add');
   if(e.key==='w' || e.key==='W') setMode('mat');
   if(e.key==='h' || e.key==='H') renderHeatmap();
